<?xml version="1.0"?>
<package format="3">
  <name>dance_move_detector</name>
  <version>0.0.1</version>
  <description>ROS2 Virtual Dance Move Detector Simulation</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
